--- a/pages/productos.html
+++ b/pages/productos.html
@@ -9,12 +9,13 @@
     <link rel="shortcut icon" href="../img/Logito.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="../scss/style.css">
 </head>
 <body>
 
-    <div class="header__img__escondida__responsive">
-        <img src="../img/Logito.png" alt="Logo de Royale's Cheese" class="logo__tamaño__responsive">
+    <div class="header__img__escondida__responsive animate__animated animate__bounce">
+        <a href="../index.html"><img src="../img/Logito.png" alt="Logo de Royale's Cheese" class="logo__tamaño__responsive"></a>
     </div>
    <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="header__father container-fluid">
@@ -29,7 +30,7 @@
                 <li><a href="./locales.html" class="header__lista titulo-link">LOCALES</a></li>
                 <li>
                 <div class="logo">
-                   <img src="../img/Logito.png" alt="Hamburguesa logo" class="logo__tamaño">
+                   <a href="../index.html"><img src="../img/Logito.png" alt="Hamburguesa logo" class="logo__tamaño"></a>
                 </div>
                 </li>
                 <li><a href="./quienessomos.html" class="header__lista titulo-link">NOSOTROS</a></li>
@@ -116,6 +117,29 @@
                 <div class="productos__capa">
                     <h2 class="productos__capa__titulo">Sandwich de pollo frito</h2>
                     <p>Sandwich de pollo frito con papas cheddar y gaseosa/jugo a eleccion.</p>
+                </div>
+            </div>
+        </section>
+
+
+        <div class="productos__subtitulo__seccion" id="seccion__burguer">
+            <div><h2 class="productos__subtitulo__seccion__size">FRITURAS</h2></div>
+        </div>
+        <div class="productos__subtitulo__seccion__desc">
+            <p class="productos__subtitulo__seccion__desc__size">🍟Sumérgete en nuestra deliciosa tentación de papas fritas doradas y nuestros aros de cebolla crujientes.🍟</p>
+        </div>
+        <section class="container__productos">
+            <div class="caja__productos">
+                <img class="caja__productos__Img caja__productos__Img__bebida" src="" alt="">
+                <div class="productos__capa">
+                    <h2 class="productos__capa__titulo">Aros de cebolla</h2>
+                </div>
+            </div>
+            
+            <div class="caja__productos">
+                <img class="caja__productos__Img caja__productos__Img__bebida" src="" alt="">
+                <div class="productos__capa">
+                    <h2 class="productos__capa__titulo">Papas fritas</h2>
                 </div>
             </div>
         </section>
