--- a/pages/quienessomos.html
+++ b/pages/quienessomos.html
@@ -9,12 +9,13 @@
     <link rel="shortcut icon" href="../img/Logito.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="../scss/style.css">
 </head>
 <body>
 
-    <div class="header__img__escondida__responsive">
-        <img src="../img/Logito.png" alt="Logo de Royale's Cheese" class="logo__tamaño__responsive">
+    <div class="header__img__escondida__responsive animate__animated animate__bounce">
+        <a href="../index.html"><img src="../img/Logito.png" alt="Logo de Royale's Cheese" class="logo__tamaño__responsive"></a>
     </div>
    <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="header__father container-fluid">
@@ -29,7 +30,7 @@
                 <li><a href="./locales.html" class="header__lista titulo-link">LOCALES</a></li>
                 <li>
                 <div class="logo">
-                   <img src="../img/Logito.png" alt="Hamburguesa logo" class="logo__tamaño">
+                    <a href="../index.html"><img src="../img/Logito.png" alt="Hamburguesa logo" class="logo__tamaño"></a>
                 </div>
                 </li>
                 <li><a href="./quienessomos.html" class="header__lista titulo-link">NOSOTROS</a></li>
