Commit sobre detalles

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <li><a href="./pages/locales.html" class="header__lista titulo-link">LOCALES</a></li>
                         <li>
                         <div class="logo">
-                            <a href="./index.html"><img src="./img/Logito.png" alt="Hamburguesa logo" class="logo__tamaño"></a>
+                            <a href="./index.html"><img src="./img/Logito.png" alt="Logo de Royale's Cheese" class="logo__tamaño"></a>
                         </div>
                         </li>
                         <li><a href="./pages/quienessomos.html" class="header__lista titulo-link">NOSOTROS</a></li>
@@ -65,7 +65,7 @@
                 <a href="./pages/productos.html" class="titulo-link grid-item-inicio1" style="color: black; ">ver los productos <i class="bi bi-arrow-right"></i> <i class="bi bi-arrow-down"></i></a>
             </div>
             <div class="sectiongrid3">
-                <img class="sectiongrid4" src="./img/Burguer.grid.inicio.jpg" alt="Hamburguesa de fondo">
+                <img class="sectiongrid4" src="./img/Burguer.grid.inicio.jpg" alt="Hamburguesa indicatoria sobre la seccion menu">
             </div>
         </section>
 
@@ -78,34 +78,34 @@
             <div class="overflow__">
                 <div class="carrousel__overflow" draggable="true">
                     <div class="carrousel__overflow__secciones">
-                        <img class="carrousel__overflow__img" src="./img/Logito.png" alt="" style="background-color: #413d3d;">
+                        <img class="carrousel__overflow__img" src="./img/Logito.png" alt="Logo Royale's Cheese" style="background-color: #413d3d;">
                     </div>
                     <div class="carrousel__overflow__secciones">
-                        <img class="carrousel__overflow__img" src="./img/Foto.2.overflow.jpg" alt="">
+                        <img class="carrousel__overflow__img" src="./img/Foto.2.overflow.jpg" alt="Hamburguesa">
                     </div>
                     <div class="carrousel__overflow__secciones">
-                        <img class="carrousel__overflow__img" src="./img/Foto.3.overflow.jpg" alt="">
+                        <img class="carrousel__overflow__img" src="./img/Foto.3.overflow.jpg" alt="Cocinero con una de nuestras hamburguesas">
                     </div>
                     <div class="carrousel__overflow__secciones">
-                        <img class="carrousel__overflow__img" src="./img/Foto.4.overflow.jpg" alt="">
+                        <img class="carrousel__overflow__img" src="./img/Foto.4.overflow.jpg" alt="Cocinero con una de nuestras viejas recetas">
                     </div>
                     <div class="carrousel__overflow__secciones">
-                        <img class="carrousel__overflow__img" src="./img/Foto.5.overflow.jpg" alt="">
+                        <img class="carrousel__overflow__img" src="./img/Foto.5.overflow.jpg" alt="Imagen de hamburguesa vista desde primera persona">
                     </div>
                     <div class="carrousel__overflow__secciones">
-                        <img class="carrousel__overflow__img" src="./img/Foto.6.overflow.jpg" alt="">
+                        <img class="carrousel__overflow__img" src="./img/Foto.6.overflow.jpg" alt="Hamburguesa doble preparada">
                     </div>
                     <div class="carrousel__overflow__secciones">
-                        <img class="carrousel__overflow__img" src="./img/Foto.2.overflow.jpg" alt="">
+                        <img class="carrousel__overflow__img" src="./img/Foto.2.overflow.jpg" alt="Hamburguesa">
                     </div>
                     <div class="carrousel__overflow__secciones">
-                        <img class="carrousel__overflow__img" src="./img/Foto.3.overflow.jpg" alt="">
+                        <img class="carrousel__overflow__img" src="./img/Foto.3.overflow.jpg" alt="Cocinero con una de nuestras hamburguesas">
                     </div>
                     <div class="carrousel__overflow__secciones">
-                        <img class="carrousel__overflow__img" src="./img/Foto.4.overflow.jpg" alt="">
+                        <img class="carrousel__overflow__img" src="./img/Foto.4.overflow.jpg" alt="Cocinero con una de nuestras viejas recetas">
                     </div>
                     <div class="carrousel__overflow__secciones">
-                        <img class="carrousel__overflow__img" src="./img/Logito.png" alt="" style="background-color: #413d3d;">
+                        <img class="carrousel__overflow__img" src="./img/Logito.png" alt="Logo Royale's Cheese" style="background-color: #413d3d;">
                     </div>
                 </div>
             </div>
@@ -124,7 +124,7 @@
         <section>
             <div class="inicio__card">
                 <div class="inicio__card__div card" style="width: 20rem;">
-                    <img src="./img/Foto.negocio.5.png" class="card-img-top" alt="...">
+                    <img src="./img/Foto.negocio.5.png" class="card-img-top" alt="Foto de uno de nuestros locales">
                     <div class="card-body">
                       <h5 class="card__titulo card-title">Nuestros locales</h5>
                       <p class="card__texto card-text"> Explora nuestra variedad de espacios fisicos que te llevarán a vivir la mejor experiencias</p>
@@ -132,7 +132,7 @@
                     </div>
                 </div>
                 <div class="inicio__card__div card" style="width: 20rem;">
-                    <img src="./img/Foto.5.overflow.jpg" class="card-img-top" alt="...">
+                    <img src="./img/Foto.5.overflow.jpg" class="card-img-top" alt="Imagen de hamburguesa vista desde primera persona">
                     <div class="card-body">
                       <h5 class="card__titulo card-title">Mirá nuestro menu</h5>
                       <p class="card__texto card-text">Desde hamburguesas jugosas hasta una amplia gama de bebidas refrescantes y postres tentadores.</p>
@@ -140,7 +140,7 @@
                     </div>
                 </div>
                 <div class="inicio__card__div card" style="width: 20rem;">
-                    <img src="./img/Foto.1.overflow.jpg" class="card-img-top" alt="...">
+                    <img src="./img/Foto.1.overflow.jpg" class="card-img-top" alt="Uno de nuestros cocineros con hamburguesa en bandeja">
                     <div class="card-body">
                       <h5 class="card__titulo card-title">¿Queres trabajar con nosotros?</h5>
                       <p class="card__texto card-text">Investiga mas esta seccion para saber mas sobre nosotros y tener tu confianza</p>
