--- a/pages/locales.html
+++ b/pages/locales.html
@@ -30,7 +30,7 @@
                 <li><a href="./locales.html" class="header__lista titulo-link">LOCALES</a></li>
                 <li>
                 <div class="logo">
-                    <a href="../index.html"><img src="../img/Logito.png" alt="Hamburguesa logo" class="logo__tamaño"></a>
+                    <a href="../index.html"><img src="../img/Logito.png" alt="Logo de Royale's Cheese" class="logo__tamaño"></a>
                 </div>
                 </li>
                 <li><a href="./quienessomos.html" class="header__lista titulo-link">NOSOTROS</a></li>
@@ -111,12 +111,12 @@
         </div>
 
         <section class="container__desc">
-            <h2 class="container__desc__size">👇PRóXIMOS LOCALES POR ABRIR...👇</h2>
+            <h2 class="container__desc__size">👇⌛PRóXIMOS LOCALES POR ABRIR...⌛👇</h2>
         </section>
 
         <div class="container__locales__info">
             <div class="caja__locales">
-                <img src="../img/Foto.negocio.7.jpg" alt="Foto local de Ramos mejia">
+                <img src="../img/Foto.negocio.7.jpg" alt="Foto futuro local en cordoba">
                 <div class="locales__capa">
                     <h2 class="locales__capa__titulo">CORDOBA</h2>
                     <p style="font-size: 2rem;">¿...?</p>
@@ -124,7 +124,7 @@
             </div>
 
             <div class="caja__locales">
-                <img src="../img/Foto.negocio.8.jpg" alt="Foto local de Alto Avellaneda">
+                <img src="../img/Foto.negocio.8.jpg" alt="Foto futuro local en Olavarria">
                 <div class="locales__capa">
                     <h2 class="locales__capa__titulo">OLAVARRIA</h2>
                     <p style="font-size: 2rem;">¿...?</p>
