--- a/pages/quienessomos.html
+++ b/pages/quienessomos.html
@@ -30,7 +30,7 @@
                 <li><a href="./locales.html" class="header__lista titulo-link">LOCALES</a></li>
                 <li>
                 <div class="logo">
-                    <a href="../index.html"><img src="../img/Logito.png" alt="Hamburguesa logo" class="logo__tamaño"></a>
+                    <a href="../index.html"><img src="../img/Logito.png" alt="Logo de Royale's Cheese" class="logo__tamaño"></a>
                 </div>
                 </li>
                 <li><a href="./quienessomos.html" class="header__lista titulo-link">NOSOTROS</a></li>
@@ -51,7 +51,7 @@
 
         <section class="nosotros__1">
             <div class="nosotros__cajita">
-                <img class="nosotros__img" src="../img/Logito.png" alt="">
+                <img class="nosotros__img" src="../img/Logito.png" alt="Foto logo Royale's Cheese">
             </div>
             <div class="nosotros__cajita">
                 <h3 class="nosotros__size__titulo">¡HISTORIA!</h3>
@@ -68,7 +68,7 @@
                 </p>
             </div>
             <div class="nosotros__cajita"> 
-                <img class="nosotros__img2" src="../img/Burguer.nosotross.png" alt="">
+                <img class="nosotros__img2" src="../img/Burguer.nosotross.png" alt="Una de nuestras hamburguesas de doble medallon de carne">
             </div>
         </section>
 
